--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -1,259 +1,178 @@
-.header {
-  // border: 3px dashed red;
+.body {
   background-color: black;
-  // padding: 0 1rem;
   width: 100%;
-  display: grid;
-  grid-template:
-    "logo nothing nav" 150px
-    /480px 1fr 400px;
-}
+  height: 130px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 10;
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+  transition-duration: 300ms;
 
-.logo {
-  border: 10px solid red;
-  padding: 1rem;
-  // border: 3px solid red;
-  grid-area: logo;
-  font-size: 20px;
-  color: white;
-  background-color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  h1 {
-    margin: 0;
-  }
-}
-
-.nothing {
-  // border: 3px solid blue;
-  grid-area: nothing;
-  background-color: black;
-}
-
-.nav {
-  // border: 3px solid orange;
-  grid-area: nav;
-  color: white;
-  background-color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  ul {
-    list-style: none;
+  .section {
+    height: 130px;
+    background-color: black;
+    max-width: 1240px;
+    margin: auto;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 1rem;
-  }
-
-  li {
-    padding: 0 1.5rem;
-    // padding: 0 0.5rem;
-  }
-
-  a {
-    background-color: gray;
     color: white;
 
-    border-radius: 8px;
-    padding: 1rem 1rem;
-    display: flex;
-    &:hover {
-      opacity: 0.7;
-      // background-color: gray;
+    h1 {
+      font-size: 40px;
+      margin: 0 0 0 1rem;
+      cursor: pointer;
+    }
+
+    li {
+      list-style: none;
+
+      .orangeButton {
+        background-color: orangered;
+      }
     }
   }
-}
 
-.drawerMenu {
-  border: 3px solid rgb(35, 79, 255);
-  // border: 3px solid rgb(47, 47, 238);
-  width: 0;
-  color: white;
-  background-color: rgb(34, 35, 36);
-  transition: 0.5s;
-  height: 0;
-  opacity: 0;
-  z-index: -100;
-  &.open {
-    height: 100vh;
-    opacity: 1;
-    z-index: 100;
-  }
-}
-
-// ################# close #################
-
-@media screen and (max-width: 1024px) {
-  .header {
-    display: grid;
-    grid-template:
-      "logo nothing button" 150px
-      /480px 1fr 100px;
-  }
-
-  .logo {
-    border: 10px solid blue;
-    font-size: 20px;
-  }
-
-  .nav {
+  .normal {
     display: none;
   }
 
-  @media screen and (max-width: 768px) {
-    .header {
-      display: grid;
-      grid-template:
-        "logo nothing button" 150px
-        /480px 1fr 100px;
-
-      .logo {
-        border: 10px solid orange;
-        font-size: 20px;
-      }
-    }
+  .button {
+    display: block;
+    z-index: 10;
+    margin-right: 1rem;
   }
 
-  @media screen and (max-width: 600px) {
-    .header {
-      display: grid;
-      grid-template:
-        "logo nothing button" 150px
-        /380px 1fr 100px;
-
-      .logo {
-        // padding: 0.5rem;
-        // padding: 1rem;
-        border: 10px solid aqua;
-        font-size: 16px;
-      }
-    }
-  }
-
-  //スマートフォン（iphone12）
-  @media screen and (max-width: 480px) {
-    .header {
-      display: grid;
-      grid-template:
-        "logo nothing button" 150px
-        /300px 1fr 80px;
-
-      .logo {
-        border: 10px solid magenta;
-        padding: 0.5rem;
-        font-size: 13px;
-      }
-    }
-  }
-  // 🍔＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃🍔
-
-  .container {
-    // border: 5px solid orange;
-    grid-area: button;
-    position: relative;
+  .menu {
     background-color: black;
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
+    // background-color: red;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+    transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+    transition-duration: 300ms;
 
-    .humburger {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      // border: 3px solid red;
-      // width: 80px;
-      // height: 80px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
+    ul {
+      padding: 0;
+
+      li {
+        padding: 1rem;
+        font-size: 32px;
+      }
+
+      a {
+        font-weight: bold;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 1rem;
+        display: flex;
+        border: 3px solid black;
+
+        &:hover {
+          border-bottom: 3px solid white;
+        }
+      }
     }
+  }
 
-    span {
-      background-color: white;
-      // background-color: white;
-      width: 30px;
-      height: 3px;
-      display: block;
-      margin-bottom: 7px;
+  .menu00 {
+    position: absolute;
+    top: 0;
+    left: -100%;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    text-align: center;
+    transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+    transition-duration: 300ms;
+
+    ul {
+      padding: 0;
+
+      li {
+        padding: 1rem;
+        font-size: 32px;
+        &:hover {
+          color: gray;
+        }
+      }
     }
   }
 }
 
-//❌＃＃＃＃＃＃＃＃＃上から降ってくるメニュー表＃＃＃＃＃＃＃＃＃❌
-.drawerMenu {
-  // border: 5px solid red;
-  width: 100%;
-  min-height: 100%;
-  position: fixed;
-  top: 0;
+@media screen and (min-width: 900px) {
+  // @media screen and (min-width: 640px) {
+  .body {
+    .section {
+      .normal {
+        display: flex;
+        padding: 0;
 
-  ul {
-    // border: 5px solid blue;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
+        li {
+          padding: 1rem 0.5rem;
+          font-size: 20px;
 
-  .close {
-    // border: 5px solid magenta;
-    height: 150px;
-    display: flex;
-    justify-content: flex-end;
+          a {
+            font-weight: bold;
+            padding: 1rem;
+            display: flex;
+            border-radius: 10px;
 
-    .border {
-      // border: 5px solid skyblue;
-      width: 150px;
-      position: relative;
-    }
-
-    .closeBox {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      // border: 5px solid orange;
-    }
-
-    span {
-      background-color: white;
-      width: 30px;
-      height: 3px;
-      display: block;
-      margin-bottom: 10px;
-      margin: 0 0 10px auto;
-      &:first-child {
-        transform: translateY(6px) rotate(150deg);
+            &:hover {
+              background-color: gray;
+              color: white;
+            }
+          }
+        }
       }
-      &:nth-child(2) {
-        transform: translateY(-6px) rotate(-150deg);
-        margin-bottom: 0;
+
+      .button {
+        display: none;
+      }
+
+      .menu {
+        display: none;
+      }
+
+      .menu00 {
+        display: none;
       }
     }
   }
+}
 
-  li {
-    // border: 5px solid green;
-    margin-bottom: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+@media screen and (max-width: 768px) {
+  .body {
+    .section {
+      h1 {
+        font-size: 35px;
+      }
+    }
   }
+}
 
-  a {
-    // border: 5px solid blue;
-    width: 200px;
-  }
-
-  .mainTitle {
-    text-align: center;
-    padding: 1rem;
-    margin: 0;
-    border-bottom: 5px solid rgb(35, 79, 255);
-    // border: 5px solid orange;
-    cursor: pointer;
+@media screen and (max-width: 480px) {
+  .body {
+    .section {
+      h1 {
+        font-size: 25px;
+      }
+    }
   }
 }
