.sentence:nth-child(1)のmargin-bottomを2.5remに設定

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -431,7 +431,8 @@
       // padding: 1rem;
 
       .sentence:nth-child(1) {
-        margin-bottom: 1.5rem;
+        margin-bottom: 2.5rem;
+        // margin-bottom: 1.5rem;
         // margin-bottom: 1rem;
       }
 
