--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -1,6 +1,8 @@
 .body {
+  // background-color: red;
   background-color: black;
   width: 100%;
+  // height: 100px;
   height: 130px;
   position: fixed;
   left: 0;
@@ -10,7 +12,9 @@
   transition-duration: 300ms;
 
   .section {
+    // height: 100px;
     height: 130px;
+    // background-color: blue;
     background-color: black;
     max-width: 1240px;
     margin: auto;
@@ -169,9 +173,36 @@
 
 @media screen and (max-width: 480px) {
   .body {
+    height: 100px;
+
+    transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+    transition-duration: 0ms;
+
     .section {
+      height: 100px;
+      h1 {
+        font-size: 28px;
+        margin: 0;
+        // font-size: 25px;
+      }
+
+      .button {
+        margin-right: 0;
+        // margin-right: 1rem;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .body {
+    height: 100px;
+
+    .section {
+      height: 100px;
       h1 {
         font-size: 25px;
+        // font-size: 25px;
       }
     }
   }
