--- a/components/layout/layout.module.scss
+++ b/components/layout/layout.module.scss
@@ -5,26 +5,42 @@
   display: grid;
   grid-template:
     "head" 130px
+    // "head" 130px
     "main" 1fr
     "foot" 50px
     / 1fr;
+
+  .header {
+    grid-area: head;
+    width: 100%;
+    // background-color: rgb(60, 60, 60);
+  }
+
+  .main {
+    grid-area: main;
+    width: 100%;
+  }
+
+  .footer {
+    grid-area: foot;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(60, 60, 60);
+    color: white;
+  }
 }
 
-.header {
-  grid-area: head;
-}
-
-.main {
-  width: 100%;
-  grid-area: main;
-}
-
-.footer {
-  width: 100%;
-  grid-area: foot;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(60, 60, 60);
-  color: white;
+@media screen and (max-width: 480px) {
+  .body {
+    width: 100%;
+    min-height: 100vh;
+    display: grid;
+    grid-template:
+      "head" 100px
+      "main" 1fr
+      "foot" 50px
+      / 1fr;
+  }
 }
